add feature get my board
